# ProjetoFinal-Grupo6

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt
airflow/: teste_dag.py
base/: COSING_Annex_III_v2.xls  COSING_Annex_II_v2.xls  COSING_Annex_IV_v2.xls  COSING_Annex_V_v2.xls
bronze/: ingest.py  raw.py
frontend/metabase_data/metabase/: metabase.mv.db  metabase.trace.db
glow_dbt/: dbt_project.yml
glow_dbt/macros/: conversions.sql  data_sanitizing.sql
glow_dbt/models/marts/: mart_sales.sql  mart_unified_products.sql  schema.yml
glow_dbt/models/staging/: sources.yml  stg_cosmetics_enrichment.sql  stg_cosmetics_products.sql  stg_sales_data.sql  stg_sales_enrichment.sql  stg_skincare_enrichment.sql  stg_skincare_products.sql
glow_dbt/seeds/: brand_mapping.csv  cosmetics_label_mapping.csv  product_type_mapping.csv  sales_data_enrichment.csv  skincare_label_mapping.csv
profiles/: .user.yml  profiles.yml
sql/: init.sql
validation/: expectation_validation_raw_cosmetics.py  expectation_validation_raw_products.py  expectation_validation_raw_sales.py  gx_config.py  gx_run.py
